--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@eastdesire/jscolor": "^2.5.2",
     "vue": "^3.4.29"
   },
   "devDependencies": {
